# vm-1

./: Cargo.toml  build.rs
src/: lib.rs  opcode.rs  util.rs  vm.rs
src/asm/: errors.rs  instruction.rs  main.rs  operand.rs
src/gui/: main.rs
test_programs/: program.asm
ui/: appwindow.slint
