[package]
name = "vm-1"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libvm"
path = "src/lib.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"

[[bin]]
name = "asm"
path = "src/asm/main.rs"

[dependencies]
anyhow = "^1.0"
thiserror = "^1.0"
num_enum = "^0.7"
slint = "^1.3"
itertools = "^0.12"
clap = { version = "^4.4", features = ["derive"] }
refbox = "^0.3"

[build-dependencies]
slint-build = "^1.3"
